# swan

./: .gitignore  .swan-config  .swift-format  .swift-version  .wasm-sdk-version  .wasm-sdk-versions  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  Package.resolved  Package.swift  README.md  package.json  pnpm-lock.yaml
.claude/agents/: reviewer-architecture.md  reviewer-docs.md  reviewer-logic.md  reviewer-performance.md  reviewer-security.md  reviewer-tests.md
.devcontainer/: Dockerfile  README.md
.github/workflows/: dawn-build-release.yaml  dawn-check.yaml  dawn-info.yaml  dawn-nightly-debug.yaml  dawn-nightly-release.yaml  dawn-nightly.yaml  dawn.yaml  linux-docker-image.yaml  swift-wasm-embedded.yaml  swift-wasm.yaml  swift-windows.yaml  swift.yml
Dawn/: CMakeLists.txt  README.md  archive_builder.py  ci_build_dawn.py  ci_targets.py  dawn_builder.py  dawn_source.patch  dawn_source.py  dawn_version.json  setup.cfg
Demos/BitonicSort/: BitonicSort.swift  BitonicSortState.swift  Shaders.swift  index.html  main.swift
Demos/BitonicSortWasm/: BitonicSort.swift  BitonicSortState.swift  BitonicSortWasmDemo.swift  Shaders.swift  main.swift
Demos/DemoUtils/: Demo+DX12.swift  Demo+Metal.swift  Demo.swift
Demos/GameOfLife/: GameOfLife.swift  Shaders.swift
Demos/Leaks/: Leaks.swift
Demos/RGFW/: implementation.c
Demos/WebGPUMinimalWasm/: README.md  README:md  index.html  main.swift
Demos/WebGPUTriangleDemo/: index.html  main.swift  triangle.wgsl
Resources/: cellShader.wgsl  simulationCompute.wgsl
Scripts/: sdk-install.mjs
(+118 files in other folders)
